...
                    .size(height = 220.dp, width = 120.dp)
            )
        },
        contentScale = ContentScale.FillBounds,
        contentDescription = title,
        modifier = modifier
            .testTag("movieCard")
            .size(height = 220.dp, width = 120.dp)
            .clip(shape = MaterialTheme.shapes.small)
            .clickable(onClick = onClick),
    )
}
